--- a/index.html
+++ b/index.html
@@ -1,207 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap" rel="stylesheet">
-    <title>MEME generator!</title>
-    <style>
-        :root
-        {
-            --size:640px;
-        }
-        *
-        {
-            margin: 0;
-            padding: 0;
-            font-family: 'Comic Neue', sans-serif;
-            box-sizing: border-box;
-        }
-        .wrapper
-        {
-            color: rgba(0,0,0,0.8);
-        }
-        .heading
-        {
-            padding: 5px;
-            color: white;
-        }
-        .canvas
-        {
-            width: auto;
-            min-width: 80%;
-            margin: 0 auto;
-            box-shadow: 0 0 15px 5px rgba(0,0,0,0.3);
-        }
-        #c
-        {
-            margin: 0 auto;
-            display: block;/*
-            max-width: var(--size);
-            max-height: var(--size);
-            width: 100vw;
-            height: 100vw;*/
-        }
-        button,input,label
-        {
-            padding: 5px;
-            border-radius: 5px;
-            outline: none;
-            box-shadow: 0 2px 2px 2px rgba(0,0,0,0.2);
-            border: 1px solid grey;
-        }
-        input
-        {
-            font-family: 'Teko';
-        }
-        label
-        {
-            border: none;
-            box-shadow: none;
-        }
-        button:active,input:active
-        {
-            transform: scale(1.1);
-        }
-        header
-        {
-            padding: 12px;
-            overflow: hidden;
-            background:linear-gradient(rgb(255, 0, 76),rgb(255, 0, 76),rgb(117, 0, 0));
-            text-align: center;
-        }
-        h1
-        {
-            font-family: sans-serif;
-            font-weight: 700;
-            font-size: 3em;
-            margin: 24px auto;
-        }
-        h3,h5
-        {
-            margin: 0 auto;
-            font-weight: lighter;
-        }
-        .choose
-        {
-            padding: 20px;
-            margin: 20px auto;
-        }
-        #imgFile
-        {
-            overflow: hidden;
-            display: block;
-            margin: 10px 0;
-        }
-        .inp, .ips
-        {
-            padding: 20px;
-            overflow: hidden;
-            display: none;
-            justify-content: space-evenly;
-            align-content: center;
-            flex-wrap: wrap;
-        }
-        .inp>*, .ips>*
-        {
-            flex-basis: 40%;
-            margin: 10px;
-            text-align: center;
-        }
-        .ranged
-        {
-            padding: 0;
-            box-shadow: none;
-        }
-        span
-        {
-            display: block;
-            flex-basis: 100%;
-        }
-        p:first-of-type
-        {
-            display: inline;
-        }
-        .feet
-        {
-            overflow: hidden;
-            padding: 12px;
-            text-align: center;
-        }
-        @media all and (max-width: 500px)
-        {
-            body
-            {
-                font-size: 0.6em;
-            }
-            .heading
-            {
-                margin: 1px;
-            }
-            .inp>*, .ips>*
-            {
-                flex-basis: 100%;
-            }
-            label
-            {
-                font-size: 1.1em;
-            }
-        }
-
-
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap" rel="stylesheet">
+<title>MEME generator!</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header>
-            <h1 class="heading">MEME GENERATOR</h1>
-            <h3 class="heading">Life without fun is like food without salt</h3>
-            <h5 class="heading">Create some awesome memes here</h5>
-        </header>
-        <div class="canvas">
-            <canvas id="c"></canvas>
-        </div>
-        <div class="choose">
-            <div class="img-choose">
-                <input type="file" id="imgFile">
+<div class="wrapper">
+    <header>
+      <h1 class="heading">MEME GENERATOR</h1>
+      <h3 class="heading">Life without fun is like food without salt</h3>
+      <h5 class="heading">Create some awesome memes here</h5>
+    </header>
+    <div class="canvas">
+        <canvas id="c"></canvas>
+    </div>
+
+
+    <!--mode select-->
+    <div class="choose">
+        <ol>
+            <li><div class="btns">
                 <p>Select mode: </p>
-                <button id="auto">Default</button>
+                <button id="auto">Basic</button>
                 <button id="manual">Manual</button>
-            </div>
-            <div class="inp">
-                <label for="superText">Text:</label>
-                <input type="text" name="superText" id="superText" placeholder="Your Text">
-                <label for="superSize">Size:</label>
-                <input class="ranged" type="range" min="10" name="superSize" value="32" max="100" id="superSize">
-                <label for="superY">Y-offset:</label>
-                <input class="ranged" type="range" min="0" name="superY" value="100" max="640" id="superY">
-                <button id="plus">+</button>
-                <button id="clicked">Click</button>
-                <span>Click
-                    <button class="save">Save</button> to get link.
-                    <a class="cor">Open this Link in new tab</a>
-                </span>
-            </div>
-            <div class="ips">
-                <label for="topText">Top Text: </label>
-                <input type="text" name="topText" id="topText" placeholder="Enter text here">
-                <label for="bottomText">Bottom Text: </label>
-                <input type="text" name="bottomText" id="bottomText" placeholder="bottom text">
-                <label for="distText">Distance from edges: </label>
-                <input type="text" name="distText" id="high" placeholder="integer value">
-                <span>Click
-                    <button id="refresh">Refresh</button> to see results. Click
-                    <button class="save">Save</button> to get link.
-                    <a class="cor">Open this Link in new tab</a>
-                </span>
-            </div>
+            </div></li>
+            <li><div class="img-choose">
+                <label for="imgFile">Upload your image</label>
+                <input type="file" name="imgFile" id="imgFile">
+            </div></li>
+        </ol>
+
+
+
+        <!--manual-->
+        <div class="inp">
+            <label for="superText">Text:</label>
+            <input type="text" name="superText" id="superText" placeholder="Your Text">
+            <label for="superSize">Size:</label>
+            <input class="ranged" type="range" min="10" name="superSize" value="32" max="100" id="superSize">
+            <label for="superY">Y-offset:</label>
+            <input class="ranged" type="range" min="0" name="superY" value="100" max="640" id="superY">
+            
+            <button id="plus">+</button>
+            <button id="clicked">Click</button>
+            <span>Click '+' to add multiple lines. 
+                Click
+                <button class="save">Save</button> to get link.
+                <a class="cor">Open this Link in new tab</a>
+            </span>
         </div>
-        <div class="feet">
-            <p>*type in uppercase to make memes readable</p>
-            <p>*use square images for best results</p>
+
+
+
+        <!--basic-->
+        <div class="ips">
+            <label for="topText">Top Text: </label>
+            <input type="text" name="topText" id="topText" placeholder="Enter text here">
+            <label for="bottomText">Bottom Text: </label>
+            <input type="text" name="bottomText" id="bottomText" placeholder="bottom text">
+            <label for="distText">Distance from edges: </label>
+            <input type="text" name="distText" id="high" placeholder="integer value">
+            <span>Click
+                <button id="refresh">Refresh</button> to see results. Click
+                <button class="save">Save</button> to get link.
+                <a class="cor">Open this Link in new tab</a>
+            </span>
         </div>
     </div>
-    <script src="canvas.js"></script>
+
+
+
+
+    <div class="feet">
+        <p>*type in uppercase to make memes readable</p>
+        <hr width="30%">
+        <a href="#ext" id="extend">Download templates here</a>            
+
+
+        <p class="ap">Click on images to download them</p>
+        <div id="ext">
+          <a href="imgs/temp0.jpg" download><img class="imageee" src="imgs/temp0.jpg"></a>
+          <a href="imgs/temp1.jpg" download><img class="imageee" src="imgs/temp1.jpg"></a>
+          <a href="imgs/temp2.jpg" download><img class="imageee" src="imgs/temp2.jpg"></a>
+          <a href="imgs/temp3.jpg" download><img class="imageee" src="imgs/temp3.jpg"></a>
+        </div>
+        <a class="ap" href="#c">Back to top</a>
+    </div>
+</div>
+<script src="canvas.js"></script>
 </body>
 </html>
