--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button id="clicked">Click</button>
             <span>Click '+' to add multiple lines. 
                 Click
-                <button class="save">Save</button> to get link.
+                <button class="save">Save</button> to get link.<br>
                 <a class="cor">Open this Link in new tab</a>
             </span>
         </div>
@@ -66,7 +66,7 @@
             <input type="text" name="distText" id="high" placeholder="integer value">
             <span>Click
                 <button id="refresh">Refresh</button> to see results. Click
-                <button class="save">Save</button> to get link.
+                <button class="save">Save</button> to get link.<br>
                 <a class="cor">Open this Link in new tab</a>
             </span>
         </div>
