--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
       </div>
     </div>
 
-
-
-        <!--manual-->
+    <div class="app">
+      <button id="plus">+</button>
+    </div>
+        <!--struct-->
     <div class="inp">
         <span class="full">Start typing to see your text</span>
         <label for="superText">Text:</label>
@@ -43,13 +44,20 @@
         <label for="superY">X-offset:</label>
         <input class="ranged" type="range" min="0" name="superX" value="100" max="640" id="superX">
         <button class="save">Save</button>
-        <!--button id="clicked">Click</button-->
-        <button id="plus">+</button>
         <span>'+' button is under development.
           Click 'save' and
           <a class="cor">Open this Link in new tab</a>
         </span>
     </div>
+
+
+
+
+
+
+
+
+
         <!--template and a little above-->
     <div class="feet">
         <p>*type in uppercase to make memes readable</p>
