--- a/index.html
+++ b/index.html
@@ -10,21 +10,29 @@
 </head>
 <body>
 <div class="wrapper">
-    <header class="hide"><!--remove hide-->
-      <h1 class="heading">MEME GENERATOR</h1>
-      <h3 class="heading">Life without fun is like food without salt</h3>
-      <h5 class="heading">Create some awesome memes here</h5>
-    </header>
-    <div class="canvas">
-        <canvas id="c" height="400" width="400"></canvas>
+  <header><!--remove hide-->
+    <h1 class="heading">MEME GENERATOR</h1>
+    <p class="heading">Life without fun is like food without salt</p>
+    <p class="heading">Create some awesome memes here</p>
+  </header>
+  <div class="content">
+    <div class="canvas borderAdder">
+      <canvas id="c"></canvas>
+      <script>
+        let miniWidth=Math.min(screen.width,screen.height);
+        miniWidth=(miniWidth<700)?miniWidth:miniWidth/2;
+        document.querySelector('#c').width=0.9*miniWidth;
+        document.querySelector('#c').height=0.9*miniWidth;
+      </script>
     </div>
-
-    <div class="imginp">
+    <div class="toRight borderAdder">
+      <div class="imginp">
       <input id='img' type="file">
+      </div>
+      <div class="app">
+        <button id="plus">+</button>
+      </div>
     </div>
-  <div class="app">
-    <button id="load">load</button>
-    <button id="plus">+</button>
   </div>
 </div>
 <script src="canvas.js"></script>
