thinking of adding bugs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             });
           </script>
         </div>
-        <div class="save"><button id="save">Save</button></div>
+        <div class="save"><button class="saveBtn1">Save</button></div>
         <div class="imginp">
           <input id='img' type="file">
         </div>
