Another Instruction added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li>You can pin/unpin the canvas, while scrolling.</li>
       <li>You can add any no. of texts by clicking "Add Text".</li>
       <li>Images with empty space always results in better meme.</li>
+      <li>You can't press enter for new line you have to click 'Add Text' for that</li>
       <li>Click on Instructions to dismiss</li>
     </ul>
   </div>
