Added social media icons overlap bug fixed

--- a/index.html
+++ b/index.html
@@ -94,14 +94,15 @@
         </div>
       </div>
       <div class="app">
-        <button id="plus">Add Text</button>
+        <button id="plus">Click to Add Text</button>
       </div>
     </div>
   </div>
   <footer>
     <ul>
-      <li>Created by Utkarsh Dhiman</li>
-      <li>Feedback: <a href="@mailto:utkarshdhiman48@gmail.com">Email</a></li>
+      <li><a class="fa fa-facebook" href="https://www.facebook.com/utkarsh.utkarsh.927"> Facebook</a></li>
+      <li><a class="fa fa-twitter" href="https://twitter.com/utkarshdhiman48"> Twitter </a></li>
+      <li><a class="fa fa-github" href="https://github.com/utkarsh48"> Github </a></li>
     </ul>
   </footer>
   <script>
