Changed position of add button
corrected some typos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <ul>
       <li>Upload your own Image.</li>
       <li>You can pin/unpin the canvas, while scrolling.</li>
-      <li>You can add any no. of texts by clicking "Add Text".</li>
+      <li>You can add any no. of texts by clicking "Click to Add Text".</li>
       <li>Images with empty space always results in better meme.</li>
       <li>You can't press enter for new line you have to click 'Add Text' for that</li>
       <li>Click on Instructions to dismiss</li>
@@ -94,6 +94,8 @@
         </div>
       </div>
       <div class="app">
+      </div>
+      <div class="plusBtnParent">
         <button id="plus">Click to Add Text</button>
       </div>
     </div>
